infra/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: kgateway
    namespace: dev
  hostnames:
  - "argocd.sneakertail.online"
  rules:
  - backendRefs:
    - name: argocd-server
      port: 80
