infra/argorollouts-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argorollouts-route
  namespace: argo-rollouts
spec:
  parentRefs:
  - name: kgateway
    namespace: dev
  hostnames:
  - "argorollouts.sneakertail.online"
  rules:
  - backendRefs:
    - name: argo-rollouts-dashboard
      port: 3100
