infra/grafana-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
  - name: kgateway
    namespace: dev
  hostnames:
  - "grafana.sneakertail.online"
  rules:
  - backendRefs:
    - name: grafana
      port: 80
