infra/prometheus-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  parentRefs:
  - name: kgateway
    namespace: dev
  hostnames:
  - "prometheus.sneakertail.online"
  rules:
  - backendRefs:
    - name: prometheus-server
      port: 80
